--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <p>Hello Semua, kita sedang belajar Git</p>
-
+    <p>Hello Semua, kita sedang belajar Git</p>
     <table>
         <tr>
             <td></td>
